--- a/pointerevents/pointerevent_pointerenter.html
+++ b/pointerevents/pointerevent_pointerenter.html
@@ -1,15 +1,14 @@
 ﻿<!doctype html>
 <html>
     <head>
-        <title>Pointer Event: Dispatch pointerEnter. </title>
+        <title>Pointer Event: Dispatch pointerenter. </title>
         <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
         <link rel="author" title="Microsoft" href="http://www.microsoft.com/"/>
         <meta name="assert" content="When a pointing device is moved into the hit test boundaries of an element or one of its descendants, the pointerenter event must be dispatched."/>
-		<link rel="stylesheet" type="text/css" href="pointerevent_styles.css">
-
+        <link rel="stylesheet" type="text/css" href="pointerevent_styles.css">
         <!-- http://w3c-test.org/resources/testharness.js -->
-	    <script src="http://w3c-test.org/resources/testharness.js"></script>
-		<!-- Additional helper script for common checks across event types -->
+        <script src="http://w3c-test.org/resources/testharness.js"></script>
+        <!-- Additional helper script for common checks across event types -->
         <script type="text/javascript" src="pointerevent_support.js"></script>
         <script type="text/javascript">
             var detected_pointertypes = {};
@@ -18,10 +17,10 @@
             // Requirements: the callbakc function will reference the test_pointerEvent object and
             // will fail unless the async_test is created with the var name "test_pointerEvent".
             add_completion_callback(showPointerTypes);
-
+            
             function run() {
                 var target0 = document.getElementById("target0");
-
+            
                 on_event(target0, "pointerenter", function (event) {
                     check_PointerEvent(event);
                     test_pointerEvent.step(function () {
@@ -34,7 +33,7 @@
         </script>
     </head>
     <body onload="run()">
-        <h1>Pointer Event: Dispatch pointerEnter</h1>
+        <h1>Pointer Event: Dispatch pointerenter</h1>
         <h4> 
             Test Description: 
             When a pointing device is moved into the hit test boundaries of an element or one of its descendants, the pointerenter event must be dispatched. 
@@ -47,7 +46,6 @@
             <p>The following pointer types were detected: <span id="pointertype-log"></span>.</p>
             <p>Refresh the page to run the tests again with a different pointer type?</p>
         </div>
-
         <div id="log"></div>
     </body>
 </html>
