--- a/media-source/interfaces.html
+++ b/media-source/interfaces.html
@@ -131,7 +131,7 @@ mediaSource = new MediaSource();
 video.src = URL.createObjectURL(mediaSource);
 mediaSource.addEventListener("sourceopen", function () {
   var defaultType ='video/webm;codecs="vp8,vorbis"';
-  if (video.canPlayType && video.canPlayType(defaultType)) {
+  if (video.canPlayType(defaultType)) {
     sourceBuffer = mediaSource.addSourceBuffer(defaultType);
   } else {
     sourceBuffer = mediaSource.addSourceBuffer('video/mp4');
