--- a/html/semantics/embedded-content/media-elements/playing-the-media-resource/pause-remove-from-document.html
+++ b/html/semantics/embedded-content/media-elements/playing-the-media-resource/pause-remove-from-document.html
@@ -22,7 +22,15 @@ async_test(function(t) {
     assert_false(v.paused, 'paused after removing');
     afterStableState(t.step_func(function() {
       assert_true(v.paused, 'paused after stable state');
-      v.onpause = t.step_func(function() { t.done(); });
+      v.onpause = t.step_func(function() {
+        assert_true(v.paused, 'paused in pause event');
+        // re-insert and verify that it stays paused
+        document.body.appendChild(v);
+        setTimeout(t.step_func(function() {
+          assert_true(v.paused, 'paused after re-inserting');
+          t.done();
+        }), 0);
+      });
     }));
   });
 });
