Remove pass condition from test names

--- a/html/semantics/embedded-content/media-elements/playing-the-media-resource/pause-move-to-other-document.html
+++ b/html/semantics/embedded-content/media-elements/playing-the-media-resource/pause-move-to-other-document.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>NO pause when moving to other document</title>
+<title>paused state when moving to other document</title>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <script src="/common/media.js"></script>
