--- a/html/semantics/embedded-content/media-elements/playing-the-media-resource/pause-remove-from-document-networkState.html
+++ b/html/semantics/embedded-content/media-elements/playing-the-media-resource/pause-remove-from-document-networkState.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>pause when removing from a document when networkState is NETWORK_EMPTY</title>
+<title>paused state when removing from a document when networkState is NETWORK_EMPTY</title>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <div id="log"></div>
