--- a/html/semantics/embedded-content/media-elements/playing-the-media-resource/pause-move-within-document.html
+++ b/html/semantics/embedded-content/media-elements/playing-the-media-resource/pause-move-within-document.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>NO pause when moving within a document</title>
+<title>paused state when moving within a document</title>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <script src="/common/media.js"></script>
