--- a/html/semantics/embedded-content/media-elements/playing-the-media-resource/pause-remove-from-document.html
+++ b/html/semantics/embedded-content/media-elements/playing-the-media-resource/pause-remove-from-document.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>pause when removing from a document</title>
+<title>paused state when removing from a document</title>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <script src="/common/media.js"></script>
