--- a/contributors/ttwf_shenzhen/css-shapes/noonnightstorm/submitted/shape-outside-invalid-ellipse-004.html
+++ b/contributors/ttwf_shenzhen/css-shapes/noonnightstorm/submitted/shape-outside-invalid-ellipse-004.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="flags" content="dom">
-    <meta name="assert" content="shape-outside declaration is invalid if cx in ellipse function is invalid">
-	<title>CSS Shapes Test - Ellipse - invalid cx value</title>
+    <meta name="assert" content="shape-outside declaration is invalid if ellipse function has one invalid argument">
+	<title>CSS Shapes Test - Ellipse - invalid 1 arg</title>
 	<link rel="author" title="noonnightstorm" href="mailto:noonnightstorm@gmail.com">
 	<link rel="reviewer" title="Alan Stearns" href="mailto:stearns@adobe.com">
 	<link rel="help" href="http://www.w3.org/TR/css-shapes-1/#supported-basic-shapes">
@@ -16,7 +16,7 @@
 #shape{
 	width: 300px;
 	height: 300px;
-	shape-outside: ellipse(50, 50%, 50%, 50%);
+	shape-outside: ellipse(50px);
 }
 	</style>
 </head>
